--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design-vue/use": "latest",
     "ant-design-vue": "^2.0.0-beta.10",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "remixicon": "^2.5.0",
     "vue": "^3.0.0",
+    "vue-axios": "^3.1.3",
     "vue-router": "^4.0.0-0",
+    "vue-stomp": "0.0.5",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@ant-design/icons-vue": "latest",
     "@types/jest": "^24.0.19",
+    "@types/node": "^14.14.6",
+    "@types/sockjs-client": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -30,13 +40,16 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
+    "axios": "^0.21.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "sockjs-client": "latest",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-jest": "^5.0.0-0"
   }
 }
