--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "latest",
+    "@katalonne/vue-remixicon": "^1.0.3",
     "ant-design-vue": "^2.0.0-beta.10",
+    "axios": "latest",
     "core-js": "^3.6.5",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "qs": "latest",
+    "remixicon": "^2.5.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
