--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "@ant-design/icons-vue": "latest"
+    "@ant-design/icons-vue": "latest",
+    "webstomp-client": "latest",
+    "sockjs-client": "latest"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
