--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "latest",
+    "@types/echarts": "^4.9.1",
     "ant-design-vue": "^2.0.0-beta.10",
+    "axios": "latest",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "serve": "^11.3.2",
+    "sockjs-client": "latest",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "@ant-design/icons-vue": "latest",
-    "webstomp-client": "latest",
-    "sockjs-client": "latest"
+    "webstomp-client": "latest"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/sockjs-client": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
