--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "latest",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
+    "element-plus": "^1.0.1-alpha.15",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "serve": "^11.3.2",
