--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "latest",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
-    "element-plus": "^1.0.1-alpha.15",
+    "element-plus": "^1.0.1-alpha.19",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "serve": "^11.3.2",
@@ -48,6 +48,7 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-element-plus": "0.0.8",
     "vue-jest": "^5.0.0-0"
   }
 }
